# LEET

./: .gitignore  Cargo.toml  README.md  res  rustfmt.toml
crates/leet/: Cargo.toml
crates/leet/src/: lib.rs
crates/leet_app/: Cargo.toml
crates/leet_app/src/: app.rs  core_systems.rs  lib.rs
crates/leet_bridge/: Cargo.toml
crates/leet_bridge/src/: lib.rs
crates/leet_bridge/src/render/: mod.rs  render_bridge.rs  render_proxy_binding.rs
crates/leet_core/: Cargo.toml
crates/leet_core/junk/: allocator.rs
crates/leet_core/src/: engine_clock.rs  lib.rs
crates/leet_display/: Cargo.toml
crates/leet_display/src/: event.rs  lib.rs  window.rs
crates/leet_ecs/: Cargo.toml
crates/leet_ecs/benches/: entity_get_bench.rs  flecs_parent_bench.rs  flecs_remove_component_bench.rs
crates/leet_ecs/src/: lib.rs
crates/leet_ecs/src/ecs/: entity.rs  mod.rs  registry.rs  world.rs
crates/leet_ecs/src/ecs/components/: mesh_renderer.rs  mod.rs  transform.rs
crates/leet_jobs/: Cargo.toml
crates/leet_jobs/src/: builder.rs  counter.rs  deferral.rs  dispatcher.rs  lib.rs
crates/leet_jobs2/: Cargo.toml  leet_jobs2_engine_usage.md  leet_jobs2_execution_notes.md  leet_jobs2_execution_passes.md  leet_jobs2_internals.md
crates/leet_jobs2/src/: builder.rs  config.rs  counter.rs  deferral.rs  dispatcher.rs  job_decl.rs  lib.rs  priority.rs  queue.rs  worker.rs
crates/leet_jobs_OLD_DO_NOT_USE/: Cargo.toml
crates/leet_jobs_OLD_DO_NOT_USE/src/: builder.rs  deferral.rs  job_decl.rs  priority.rs
crates/leet_log/: Cargo.toml
crates/leet_macros/: Cargo.toml
crates/leet_math/: Cargo.toml
crates/leet_render/: Cargo.toml  FrameRenderer.md  RenderGraphCoreExecutionPlan.md
crates/leet_render/examples/: size_check.rs
crates/leet_render/src/: buffer_uploaders.rs  camera.rs  gpu_array_buffers.rs  gpu_scene.rs  lib.rs  manual_texture_view.rs  pipelined_rendering.rs  plugin.rs  rendering_preprocessing.rs  shell_plugins.rs  window.rs
crates/leet_render/src/app/: mod.rs  pipelined_rendering.rs  plugin.rs  shell_plugins.rs
crates/leet_render/src/camera/: camera.rs  camera_storage.rs  mod.rs  plugin.rs
crates/leet_render/src/extract/: camera.rs  extract.rs  manual_texture_view.rs  mod.rs  plugin.rs  window.rs
crates/leet_render/src/render_graph/: mod.rs
crates/leet_render/src/render_graph/badgraph/: frame_command_lists.rs  frame_renderer.rs  nodes.rs  render_graph.rs  render_node.rs
crates/leet_render/src/render_graph/graph/: cache.rs  command_group.rs  command_recorder.rs  core_runner.rs  error.rs  execution.rs  factory.rs  frame_execution_runtime.rs  graph_executor.rs  ids.rs  metadata.rs  mod.rs  node_impl.rs  node_topology.rs  render_node_graph.rs  render_node_impl_context.rs  storage.rs  system_nodes.rs
crates/leet_render/src/render_graph/resources/: allocator.rs  desc.rs  diagnostics.rs  error.rs  lifetime.rs  mod.rs  phase.rs  pool.rs  request.rs  tag.rs  usage.rs
crates/leet_render/src/render_graph/tests/: graph_cache.rs  graph_command_recorders.rs  graph_core_runner.rs  graph_error.rs  graph_execution.rs  graph_factory_linking.rs  graph_flow_groups.rs  graph_static_types.rs  render_node_impl_context.rs  resources_allocator.rs  resources_desc.rs  resources_diagnostics.rs  resources_multicamera_dynamic.rs  resources_pool.rs  resources_resolve.rs
crates/leet_render/src/render_graph/tests/tinyGraphTest/: mod.rs
crates/leet_render/src/render_target/: frame_output.rs  frame_target_resolver.rs  info.rs  mod.rs  render_viewport.rs
crates/leet_render/src/renderer/: camera_storage.rs  command_handler.rs  frame_dispatcher.rs  frame_input.rs  frame_renderer.rs  frame_target_resolver.rs  mod.rs  render_viewport.rs
crates/leet_render/src/rendering/: buffer_uploaders.rs  command_handler.rs  error.rs  frame_context.rs  frame_dispatcher.rs  frame_input.rs  frame_renderer.rs  frame_target_resolver.rs  mod.rs  render_graph_builder.rs  render_viewport.rs
crates/leet_render/src/rhi_wgpu/: mod.rs  renderer_init.rs  rhi_objects.rs
crates/leet_render/src/scene/: gpu_array_buffers.rs  gpu_scene.rs  mod.rs  render_scene_registry.rs  rendering_preprocessing.rs
crates/leet_render/src/tests/app/: pipelined_rendering.rs  plugin.rs
crates/leet_render/src/tests/camera/: camera_storage.rs
crates/leet_render/src/tests/extract/: window.rs
crates/leet_render/src/tests/render_graph/: graph_cache.rs  graph_command_groups.rs  graph_command_recorders.rs  graph_core_runner.rs  graph_execution.rs  graph_executor.rs  graph_factory.rs  graph_import.rs  graph_mutation.rs  graph_node_impl_store.rs  graph_node_topology.rs  graph_storage.rs  graph_system_nodes.rs  mod.rs  render_node_impl_context.rs  resources_allocator.rs  resources_diagnostics.rs  resources_error.rs  resources_lifetimes.rs  resources_multicamera_dynamic.rs  resources_pool.rs  resources_requests.rs  resources_resolve.rs  resources_static_types.rs
crates/leet_render/src/tests/render_graph/tinyGraphTest/: mod.rs
crates/leet_render/src/tests/rendering/: buffer_uploaders.rs  command_handler.rs  frame_renderer.rs
crates/leet_render/src/tests/scene/: gpu_array_buffers.rs  gpu_scene.rs  rendering_preprocessing.rs
crates/leet_render/src/texture/: manual_texture_view.rs  mod.rs  plugin.rs
crates/leet_render/src/window/: mod.rs  plugin.rs  render_windows.rs  surface.rs
crates/leet_render/temp/: FixExecuteParallel.md  FrameRenderer.md  RenderGraphCoreDesign.md  RenderGraphDesign.md  RenderGraphExecutionPlan.md  RenderResourceAllocatorParallelDesign.md
crates/leet_renderer/: Cargo.toml
crates/leet_renderer/src/: frame_command_lists.rs  frame_renderer.rs  frame_submission.rs  lib.rs  render_collector.rs  render_context.rs  render_graph.rs  render_node.rs  render_proxy.rs  render_scene.rs  render_viewport.rs  renderer.rs  scene_gpu.rs  surface.rs
crates/leet_wgpu_microbench/: Cargo.toml
docs/: ARCHITECTURE.md  GETTING_STARTED.md  RENDERER_ROADMAP.md
examples/: clear_window.rs
examples/event_driven/: Cargo.toml
examples/managed_mode/: Cargo.toml
examples/manual_mode/: Cargo.toml
src/: lib.rs
(+34 files in other folders)
