[workspace]
members = [
    "crates/leet_core",
    "crates/leet_jobs2",
    "crates/leet_log",
    "crates/leet_render",
    "crates/leet_wgpu_microbench",
]
resolver = "2"

[workspace.dependencies]
async-channel = "2.3"
bytemuck = { version = "1.25", features = ["derive"] }
bevy_a11y = { git = "https://github.com/bevyengine/bevy", rev = "71ad427aa70292ff18b9d78997c04f75404ec348", package = "bevy_a11y" }
bevy_app = { git = "https://github.com/bevyengine/bevy", rev = "71ad427aa70292ff18b9d78997c04f75404ec348", package = "bevy_app" }
bevy_asset = { git = "https://github.com/bevyengine/bevy", rev = "71ad427aa70292ff18b9d78997c04f75404ec348", package = "bevy_asset" }
bevy_camera = { git = "https://github.com/bevyengine/bevy", rev = "71ad427aa70292ff18b9d78997c04f75404ec348", package = "bevy_camera" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy", rev = "71ad427aa70292ff18b9d78997c04f75404ec348", package = "bevy_ecs" }
bevy_image = { git = "https://github.com/bevyengine/bevy", rev = "71ad427aa70292ff18b9d78997c04f75404ec348", package = "bevy_image" }
bevy_input = { git = "https://github.com/bevyengine/bevy", rev = "71ad427aa70292ff18b9d78997c04f75404ec348", package = "bevy_input" }
bevy_input_focus = { git = "https://github.com/bevyengine/bevy", rev = "71ad427aa70292ff18b9d78997c04f75404ec348", package = "bevy_input_focus" }
bevy_math = { git = "https://github.com/bevyengine/bevy", rev = "71ad427aa70292ff18b9d78997c04f75404ec348", package = "bevy_math" }
bevy_render = { git = "https://github.com/bevyengine/bevy", rev = "71ad427aa70292ff18b9d78997c04f75404ec348", package = "bevy_render" }
bevy_tasks = { git = "https://github.com/bevyengine/bevy", rev = "71ad427aa70292ff18b9d78997c04f75404ec348", package = "bevy_tasks" }
bevy_transform = { git = "https://github.com/bevyengine/bevy", rev = "71ad427aa70292ff18b9d78997c04f75404ec348", package = "bevy_transform" }
bevy_window = { git = "https://github.com/bevyengine/bevy", rev = "71ad427aa70292ff18b9d78997c04f75404ec348", package = "bevy_window" }
bevy_winit = { git = "https://github.com/bevyengine/bevy", rev = "71ad427aa70292ff18b9d78997c04f75404ec348", package = "bevy_winit" }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
wgpu = { version = "29.0.3", default-features = false, features = ["dx12", "metal", "vulkan", "wgsl"] }

[package]
name = "leet"
version = "0.1.0"
edition = "2021"

[dependencies]
leet_core = { path = "crates/leet_core" }
leet_log = { path = "crates/leet_log" }
leet_render = { path = "crates/leet_render" }
bevy = { git = "https://github.com/bevyengine/bevy", rev = "71ad427aa70292ff18b9d78997c04f75404ec348", default-features = false, features = ["bevy_window", "bevy_winit", "bevy_input_focus", "bevy_camera"] }
