[package]
name = "leet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A modern, modular game engine written in Rust"
keywords = ["game", "engine", "gamedev", "ecs"]
categories = ["game-engines"]

[dependencies]
leet_core = { workspace = true }
leet_math = { workspace = true }
leet_bridge = { workspace = true }
leet_ecs = { workspace = true }
leet_app = { workspace = true }
leet_display = { workspace = true }
leet_log = { workspace = true }
anyhow = { workspace = true }

# Re-export the macro
leet_macros = { workspace = true }
