[package]
name = "leet_app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
leet_bridge = { workspace = true }
leet_core = { workspace = true }
leet_macros = { workspace = true }
leet_log = { workspace = true }
leet_display = { workspace = true }
leet_renderer = { workspace = true }

