[package]
name = "leet_bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
leet_core = { workspace = true }
leet_ecs = { workspace = true }
leet_math = { workspace = true }
leet_renderer = { workspace = true }
flecs_ecs = { workspace = true }

[dev-dependencies]
leet_log = { workspace = true }
