[package]
name = "leet_display"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "LEET display and windowing management"

[dependencies]
leet_core = { workspace = true }
leet_log = { workspace = true }
winit = "0.30"
