[package]
name = "leet_ecs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
leet_core = { workspace = true }
leet_math = { workspace = true }
leet_log = { workspace = true }
flecs_ecs = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "entity_get_bench"
harness = false

[[bench]]
name = "flecs_parent_bench"
harness = false

[[bench]]
name = "flecs_remove_component_bench"
harness = false
