[package]
name = "leet_jobs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
leet_core    = { workspace = true }
leet_log     = { workspace = true }
crossbeam-queue = { workspace = true }
thread-priority = { workspace = true }
core_affinity = { workspace = true }
