[package]
name = "leet_renderer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
leet_core    = { workspace = true }
leet_log     = { workspace = true }
leet_math    = { workspace = true }
wgpu         = { workspace = true }
pollster     = "0.3"
